# bb

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  GLOSSARY.md  README.md  TESTING.md  TOOLING.md  Turbo.xcodeproj  WORKFLOW.md  justfile
backend/: README.md
backend/relay/: Cargo.toml  README.md
backend/relay/src/: auth.rs  lib.rs  main.rs  metrics.rs  protocol.rs  relay_state.rs  state.rs  transport_quic.rs  transport_tcp.rs
backend/runtime/: Cargo.toml
backend/runtime/src/: control_protocol.rs  control_stream.rs  fuzz.rs  http.rs  http_probe.rs  lib.rs  live.rs  multi_node_routing.rs  owner_record_transport.rs  postgres.rs  quic_protocol.rs  routes.rs  runtime_quic.rs  runtime_tls.rs  server.rs  shadow.rs  talk_turn_actor.rs  websocket.rs  websocket_audit.rs  websocket_cluster.rs  websocket_network.rs
backend/runtime/tests/: request_talk_turn_integration.rs
docs/: README.md
handoffs/: 2026-04-12-1329.md  2026-04-12-2348.md  2026-04-13-1758.md  2026-04-13-1848.md  2026-04-13-2015.md  2026-04-13-2253.md  2026-04-15-1420.md  2026-04-15-1439.md  2026-04-16-0054.md  2026-04-16-1859.md  2026-04-16-2239.md  2026-04-18-0051.md  2026-04-20-1231.md  2026-04-20-1926.md  2026-04-21-0911.md  2026-04-21-2136.md  2026-04-21-2333.md  2026-04-22-1820.md  2026-04-23-0006.md  2026-04-23-1326.md  2026-04-24-0132.md  2026-05-04-1412.md  2026-05-04-1521.md  2026-05-05-0048.md  2026-05-05-1839.md  2026-05-06-0104.md  2026-05-06-0121.md  2026-05-06-1604.md  2026-05-07-1657.md  2026-05-08-1034.md  2026-05-08-2153-cloudflare-turn.md  2026-05-08-2223-custom-media-relay-plan.md  (+32 more)
(+366 files in other folders)
