[package]
name = "beepbeep-runtime"
version = "0.1.0"
edition = "2024"

[lib]
name = "turbo_runtime"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
postgres = { version = "0.19", features = ["with-serde_json-1"] }
redis = "0.27"
relay-protocol = { package = "beepbeep-relay-protocol", path = "../relay-protocol" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tungstenite = "0.24"
